--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,23 +5,32 @@
 <div id="loading-area">
 	<div class="block">
 	  <div class="initial">
-	    <span>L</span><span>o</span><span>a</span><span>d</span><span>i</span><span>n</span><span>g</span><span>.</span><span>.</span><span>.</span>
+	    <span>M</span><span>i</span><span>n</span><span>i</span><span>v</span><span>e</span><span>r</span><span>t</span><span>i</span><span>s</span><span>i</span><span>n</span><span>g</span>
 	  </div>
 	</div>
 </div>
 <div id="wrapper">
 	<!-- NAVIGATION -->
-	<div id="menu">
-		<ul id="nav" class="nav-collapse">
-			<li class="mainHome"><a href="#home"><img src="img/m-logo.jpg" alt="logo" /></a></li>
-			<li class="sectionLink"><a href="#about"><i class="icon-info-sign"></i> <span>ABOUT</span></a></li>
-			<li class="sectionLink"><a href="#portfolio"><i class="icon-briefcase"></i> <span>PORTFOLIO</span></a></li>
-			<li class="sectionLink"><a href="#services"><i class="icon-gear"></i> <span>SERVICES</span></a></li>
-			<li class="sectionLink"><a href="#team"><i class="icon-user"></i> <span>THE TEAM</span></a></li>
-			<li class="sectionLink"><a href="#blog"><i class="icon-globe"></i> <span>BLOG</span></a></li>
-			<li class="sectionLink"><a href="#features"><i class="icon-beaker"></i> <span>FEATURES</span></a></li>
-			<li class="sectionLink"><a href="#contact"><i class="icon-phone"></i> <span>CONTACT</span></a></li>
-		</ul>
+	<div id="menu-alt-wrapper">
+		<div class="container">
+			<div class="pull-left h-logo">
+				<a class="smooth" href="#home"><img src="img/h-logo.png" alt="Scrolle" /></a>
+			</div>
+			<div class="pull-right menu-alt">
+				<div id="menu2">
+					<ul id="nav" class="nav-collapse">
+						<li class="current"><a href="#home">HOME</a></li>
+						<li><a href="#about">ABOUT</a></li>
+						<li><a href="#portfolio">PORTFOLIO</a></li>
+						<li><a href="#services">SERVICES</a></li>
+						<li><a href="#team">THE TEAM</a></li>
+						<li><a href="#blog">BLOG</a></li>
+						<li><a href="#features">FEATURES</a></li>
+						<li><a href="#contact">CONTACT</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</div>
 	<!-- HOME -->
 	<div id="home" class="intro">
@@ -158,7 +167,7 @@
 		</div>
 	</div>
 	<!-- PORTFOLIO -->
-	<div id="portfolio">
+	<div id="portfolio" class="alt-portfolio">
 		<h1 class="sect-titles font-Oswald padt60">PORTFOLIO</h1>
 		<div class="divide margint40">x</div>
 		<p class="info margint30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ratione harum commodi eum aperiam accusantium quaerat eius iure ut cupiditate esse atque molestias mollitia sit vero animi ipsa quo odio?</p>
@@ -715,7 +724,7 @@
 						<div class="padcarousel pos-center">
 							<h2 class="font-Oswald">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam elementum vehicula sapien, ut vehicula ante faucibus aliquet. In in lacus sed magna molliunc. Nullam posuere congue nibh.</h2>
 							<div class="comm-name margint50">
-								<div class="pull-left comment-pic"><img src="temp/team2.jpg" class="img-circle" alt="" width="75" height="75" /></div>
+								<div class="pull-left comment-pic"><img src="temp/team1.jpg" class="img-circle" alt="" width="75" height="75" /></div>
 								<div class="pull-left font-Oswald cust-name"><h2>JACK DOE - ACCOUNT MANAGER</h2></div>
 							</div>
 						</div>
