Projects 바인딩 완료.

--- a/app/views/home/_project.html.erb
+++ b/app/views/home/_project.html.erb
@@ -1,9 +1,9 @@
 <li>
-	<a class="iframe portfolio-group" href="project-slide.html" title="">
+  <%= link_to project_path(project.id), class: "iframe portfolio-group cboxElement", title: "" do %>
     <%= image_tag project.project_thumbnail, class: "img-responsive"%>
 		<div class="mask">
 			<h2 class="font-Oswald"><%= project.title %></h2>
 			<div class="margint20"><i class="icon-camera"></i></div>
 		</div>
-	</a>
+  <% end %>
 </li>
