--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -51,6 +51,22 @@
                           <%= f.text_field :title, id: "focusdInput", class: "input-xlarge focused" %>
                         </div>
                       </div>
+                      
+                      <div class="control-group">
+                        <label class="control-label" for="focusedInput">카테고리</label>
+                        <div class="controls">
+                          <%= f.text_field :category, id: "focusdInput", class: "input-xlarge focused" %>
+                        </div>
+                      </div>
+                      
+                      <div class="control-group">
+                        <label class="control-label" for="focusedInput">클라이언트</label>
+                        <div class="controls">
+                          <%= f.text_field :client, id: "focusdInput", class: "input-xlarge focused" %>
+                        </div>
+                      </div>
+                      
+                      
                       <div class="control-group">
                         <label class="control-label">내용</label>
                         <div class="controls">
