--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([:admin, @project]) do |f| %>
+<%= simple_form_for([:admin, @project]) do |f| %>
   <% if @project.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
@@ -66,6 +66,12 @@
                         </div>
                       </div>
                       
+                      <div class="control-group">
+                        <label class="control-label" for="focusedInput">프로젝트 제작일</label>
+                        <div class="controls">
+                          <%= f.input :made_at, id: "focusdInput", class: "input-xlarge focused" %>
+                        </div>
+                      </div>
                       
                       <div class="control-group">
                         <label class="control-label">내용</label>
@@ -75,9 +81,9 @@
                         </div>
                       </div>
                       <div class="control-group">
-                        <label class="control-label" for="focusedInput">제목</label>
+                        <label class="control-label" for="focusedInput">프로젝트 사이트 주소</label>
                         <div class="controls">
-                          <%= f.text_field :title, id: "focusdInput", class: "input-xlarge focused" %>
+                          <%= f.text_field :website_link, id: "focusdInput", class: "input-xlarge focused" %>
                         </div>
                       </div>
                       <div class="form-actions">
