--- a/app/views/admin/projects/show.html.erb
+++ b/app/views/admin/projects/show.html.erb
@@ -38,6 +38,36 @@
                         <span class=""><%= @project.created_at %></span>
                       </div>
                     </div>
+
+                    <div class="control-group">
+                      <label class="control-label">프로젝트 제작일</label>
+                      <div class="controls">
+                        <span class=""><%= @project.made_at %></span>
+                      </div>
+                    </div>
+                    
+                    <div class="control-group">
+                      <label class="control-label">클라이언트</label>
+                      <div class="controls">
+                        <span class=""><%= @project.client %></span>
+                      </div>
+                    </div>
+                    
+                    <div class="control-group">
+                      <label class="control-label">카테고리</label>
+                      <div class="controls">
+                        <span class=""><%= @project.category %></span>
+                      </div>
+                    </div>
+                    
+                    <div class="control-group">
+                      <label class="control-label">프로젝트 사이트 주소</label>
+                      <div class="controls">
+                        <span class=""><%= @project.website_link %></span>
+                      </div>
+                    </div>
+                    
+                    
                     <div class="form-actions">
                       <%= link_to "목록으로", admin_projects_path, class: "btn"%>
                       <%= link_to "수정", edit_admin_project_path(@project), class: "btn btn-primary"%>
