--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,6 +28,9 @@
 				</div>
 			</div>
 		</div>
+    <div class="fb_like">
+      <fb:like href="https://www.facebook.com/minivertising/" layout="button" action="like" share="false" show_faces="false" share="true" width="500px"></fb:like>
+    </div>
 	</div>
 	<!-- HOME -->
 	<div id="home" class="intro">
@@ -192,6 +195,7 @@
 				</div>
 				<div class="service-list-name">FORREST</div>
 			</li>
+      
 			<li>
 				<div class="ibox">
 					<i class="icon-power-off"></i>
