--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,7 @@
 						<li><a href="#about">ABOUT</a></li>
 						<li><a href="#portfolio">PORTFOLIO</a></li>
 						<li><a href="#services">SERVICES</a></li>
-						<li><a href="#contact">CONTACT</a></li>
+						<li><a href="#contact">CONTACTs</a></li>
 					</ul>
 				</div>
 			</div>
