여러가지 이것저것 수

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,10 +2,10 @@
     <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
 <![endif]-->
 
-<div id="loading-area">
+<div id="loading-area" style="display:none;">
 	<div class="block">
 	  <div class="initial">
-	    <span>M</span><span>i</span><span>n</span><span>i</span><span>v</span><span>e</span><span>r</span><span>t</span><span>i</span><span>s</span><span>i</span><span>n</span><span>g</span>
+	    <span>M</span>
 	  </div>
 	</div>
 </div>
@@ -33,12 +33,15 @@
     </div>
 	</div>
 	<!-- HOME -->
-	<div id="home" class="intro">
+	<div id="home" class="intro white">
 		<div class="pos-center">
 			<div class="logo">
-				<img src="img/logo.jpg" class="img-resposive" alt="logo" />
+				
 			</div>
-			<div id="slider" class="margint50 font-Oswald flexslider">
+			<div>
+				MINI + ADVERTISING
+			</div>
+			<div id="slider" class="margint50 font-Oswald flexslider" style="display:none;">
 				<ul class="slides">
 					<li>THE FUNCTION OF DESIGN IS LETTING <span class="color-text">DESIGN</span> FUNCTION</li>
 					<li>ART DOES NOT <span class="color-text">REPRODUCE</span> WHAT WE SEE RATHER</li>
