--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,9 +40,9 @@
 			</div>
 			<div id="slider" class="margint50 font-Oswald flexslider">
 				<ul class="slides">
-					<li>THE FUNCTION OF DESIGN IS LETTING <span class="color-text">DESIGN</span> FUNCTION</li>
-					<li>ART DOES NOT <span class="color-text">REPRODUCE</span> WHAT WE SEE RATHER</li>
-					<li>ONCE YOU ELIMINATE QUALITY AS A <span class="color-text">PROCESS</span></li>
+					<li>안녕하세요<span class="color-text">반갑습니다</span> 컬러펑션</li>
+					<li>이원섭<span class="colo r-text">노란칼라</span> WHAT WE SEE RATHER</li>
+					<li>우하하하<span class="color-text">PROCESS</span></li>
 				</ul>
 			</div>
 			<div class="scroll-down"><a href="#about" class="smooth"><i class="icon-chevron-sign-down"></i></a></div>
