--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
 <link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/scrolle.responsive.css">
 <link rel="stylesheet" href="/css/update.css">
-<%#= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-<%#= javascript_include_tag "application", "data-turbolinks-track" => true %>
+<%#= stylesheet_link_tag    "application", media: "all" %>
+<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 <%= csrf_meta_tags %>
 <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 <!-- Respond.js IE8 support of HTML5 elements and media queries -->
