--- a/public/css/main.css
+++ b/public/css/main.css
@@ -139,7 +139,7 @@ body {
 
 #menu #nav li a i {
 	margin-right: 40px;
-	color: #fff;
+	color: #666;
 }
 
 #menu #nav li a {
@@ -177,12 +177,12 @@ body {
 	top: 0;
 	left: 0;
 	z-index: 999999;
-	background: rgba(0,0,0,0.6);
+	background: rgba(255,255,255,0.9);
 	height: 60px;
 }
 
 #menu-alt-wrapper.menu-white {
-	background-color: #fff;
+	background-color: #666;
 }
 
 #menu-alt-wrapper.menu-white #nav li a {
@@ -200,7 +200,7 @@ body {
 }
 
 #menu2 #nav li a {
-	color: #FFF;
+	color: #666;
 	font-size: 14px;
 	padding: 0;
 	font-weight: 700;
@@ -211,7 +211,7 @@ body {
 }
 
 #menu2 #nav li.current a {
-	color: #ffeb00;
+	color: #000;
 }
 
 /* MENU */
@@ -239,7 +239,7 @@ body {
 }
 
 .intro.white {
-	background: url(../temp/wbg.jpg) fixed;
+	
 }
 
 .form-intro {
