메뉴 숨김 해상도 959로 변경

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
 			</div>
 		</div>
     <div class="fb_like">
-      <fb:like href="https://www.facebook.com/minivertising/" layout="button" action="like" share="false" show_faces="false" share="true" width="500px"></fb:like>
+      <!-- <fb:like href="https://www.facebook.com/minivertising/" layout="button" action="like" share="false" show_faces="false" share="true" width="500px"></fb:like> -->
     </div>
 	</div>
 	<!-- HOME -->
@@ -47,14 +47,56 @@
 	<!-- ABOUT -->
 	<div id="about">
 		<h1 class="sect-titles font-Oswald padt60">ABOUT</h1>
-
+		<div class="divide margint40">x</div>
+		<div class="container margint40">
+			<div class="about-text">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas adipisci odio ex nemo quam sint dolore quasi quod fuga magni accusamus tempore. Eligendi inventore laudantium totam fuga accusantium accusamus ab fugiat molestiae impedit reiciendis nemo voluptatum minus iusto tenetur culpa asperiores nobis corrupti assumenda aspernatur similique commodi distinctio ad veniam vero temporibus molestias ratione nisi voluptates ipsa ex eum suscipit alias dolorum repellat nesciunt consequuntur quos rem neque a excepturi aliquid voluptatem. Blanditiis ipsam laboriosam ex architecto eveniet temporibus veniam assumenda deserunt quam reiciendis tenetur voluptas facilis sapiente esse est nulla ut numquam labore aliquam expedita deleniti! Natus praesentium ipsam qui saepe blanditiis amet iure nulla officiis incidunt officia optio exercitationem esse recusandae sapiente quasi explicabo quidem minima perspiciatis dolor impedit! Praesentium qui ipsam excepturi aperiam ut repellendus dolore ipsum recusandae quasi ullam quisquam tempora at dolorum! Ex rem explicabo et consequatur perferendis sapiente repudiandae dicta quibusdam tempore odit excepturi mollitia voluptas. Libero eligendi provident fuga consequatur et corporis nemo esse dignissimos aliquam eaque sunt blanditiis architecto quas consectetur non totam vel optio nisi tempora quaerat ad vitae labore neque accusamus amet doloremque quis? A consequuntur vero qui accusamus eaque deserunt corrupti asperiores explicabo iste facilis unde quia repudiandae est.</p>
+				<p class="read-more"><a href="#" class="rm-button">READ MORE <i class="icon-angle-down"></i></a></p>
+			</div>
+		</div>
 		<div class="container margint60">
 			<div class="row">
-				text
+				<div class="col-lg-3 col-sm-6 col3-box">
+					<div class="about-box">
+						<div class="about-icon">
+							<i class="icon-star-empty"></i>
+						</div>
+						<h3 class="margint20">PARALLAX EFFECTS</h3>
+						<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet officia dolore ipsum laborum necessitatibus similique.</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-sm-6 col3-box">
+					<div class="about-box">
+						<div class="about-icon">
+							<i class="icon-envelope-alt"></i>
+						</div>
+						<h3 class="margint20">RETINA READY</h3>
+						<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet officia dolore ipsum laborum necessitatibus similique.</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-sm-6 col3-box">
+					<div class="about-box">
+						<div class="about-icon">
+							<i class="icon-heart-empty"></i>
+						</div>
+						<h3 class="margint20">EASY CUSTOMIZE</h3>
+						<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet officia dolore ipsum laborum necessitatibus similique.</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-sm-6 col3-box">
+					<div class="about-box">
+						<div class="about-icon">
+							<i class="icon-flag-alt"></i>
+						</div>
+						<h3 class="margint20">WELL DOCUMENTED</h3>
+						<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet officia dolore ipsum laborum necessitatibus similique.</p>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="skills-box margint70">
 			<h1 class="sect-mini-titles margint60">WE ARE REPRESENT SCROLLE WITH FROM YOU</h1>
+			<div class="divide margint10">x</div>
 			<p class="info margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ea ab neque perferendis unde odio sint tenetur iure autem iste blanditiis dolorum error laborum quas repudiandae optio qui voluptatibus excepturi.</p>
 			<div class="container margint60">
 				<div class="row marginb40">
@@ -120,7 +162,6 @@
 			<p class="qname color-text">DAVID LEGGETT</p>
 		</div>
 	</div>
-
 	<!-- SERVICES -->
 	<div id="services">
 		<h1 class="sect-titles font-Oswald padt60 color-white">SERVICES</h1>
@@ -207,6 +248,7 @@
 	<!-- CONTACT -->
 	<div id="contact">
 		<h1 class="sect-titles font-Oswald padt60">CONTACT</h1>
+		<div class="divide margint40">x</div>
 		<p class="info margint30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ratione harum commodi eum aperiam accusantium quaerat eius iure ut cupiditate esse atque molestias mollitia sit vero animi ipsa quo odio?</p>
 		<div class="container padb60">
 			<div class="row margint50 contact-area">
