--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,112 +59,23 @@
 			<div class="container margint60">
 				<div class="row marginb40">
 					<div class="col-lg-8 col-sm-6 bar-box">
-						<p>DESIGN</p>
-						<div class="progress margint5">
-							<div class="progress-bar" style="width:55%;"></div>
-						</div>
-						<p>PHOTOSHOP</p>
-						<div class="progress margint5">
-							<div class="progress-bar" style="width:75%;"></div>
-						</div>
-						<p>PHOTOGRAPHY</p>
-						<div class="progress margint5">
-							<div class="progress-bar" style="width:63%;"></div>
-						</div>
-						<p>ANIMATION</p>
-						<div class="progress margint5">
-							<div class="progress-bar" style="width:47%;"></div>
-						</div>
+						s
 					</div>
 					<div class="col-lg-4 col-sm-6">
-						<div class="about-tabs">
-							<div id="accordion">
-								<div class="panel panel-scrolle">
-									<div class="panel-style1 cllpse-active">
-										<div class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse1"><i class="icon-angle-down"></i> SOME GREAT EXAMPLE</a></div>
-									</div>
-									<div id="collapse1" class="collapse collapse-scrolle in">
-										<div class="pad5">    	
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius fugiat omnis iusto saepe illum repellendus illo id rerum accusamus officiis iste cupiditate non itaque ex et.
-										</div>
-									</div>
-								</div>
-								<div class="panel panel-scrolle">
-									<div class="panel-style1">
-										<div class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse2"><i class="icon-angle-down"></i> SOME GREAT EXAMPLE</a></div>
-									</div>
-									<div id="collapse2" class="collapse collapse-scrolle">
-										<div class="pad5">    	
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius fugiat omnis iusto saepe illum repellendus illo id rerum accusamus officiis iste cupiditate non itaque ex et.
-										</div>
-									</div>
-								</div>
-								<div class="panel panel-scrolle">
-									<div class="panel-style1">
-										<div class="panel-title"><a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse3"><i class="icon-angle-down"></i> SOME GREAT EXAMPLE</a></div>
-									</div>
-									<div id="collapse3" class="collapse collapse-scrolle">
-										<div class="pad5">    	
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius fugiat omnis iusto saepe illum repellendus illo id rerum accusamus officiis iste cupiditate non itaque ex et.
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+						s
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="about-parallax font-Oswald">
-			<p class="qtext">BE FRIENDLY TO THOSE WHO ENJOY YOUR WORK AND FRIENDLIER TO THOSE WHO ATTACK IT.</p>
-			<p class="qname color-text">DAVID LEGGETT</p>
+			<p class="qtext">MINI IS BIG. <br> MINI IS ORIGNAL.<br> MINI IS FUN.</p>
 		</div>
 	</div>
 
 	<!-- SERVICES -->
 	<div id="services">
-		<h1 class="sect-titles font-Oswald padt60 color-white">SERVICES</h1>
-		<div class="divide margint40 color-white">x</div>
-		<p class="info margint30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ratione harum commodi eum aperiam accusantium quaerat eius iure ut cupiditate esse atque molestias mollitia sit vero animi ipsa quo odio?</p>
-		<ul class="services-list">
-			<li>
-				<div class="ibox">
-					<i class="icon-cny"></i>
-				</div>
-				<div class="service-list-name">MARKETING</div>
-			</li>
-			<li>
-				<div class="ibox">
-					<i class="icon-star-empty"></i>
-				</div>
-				<div class="service-list-name">FORREST</div>
-			</li>
-      
-			<li>
-				<div class="ibox">
-					<i class="icon-power-off"></i>
-				</div>
-				<div class="service-list-name">CODING</div>
-			</li>
-			<li>
-				<div class="ibox">
-					<i class="icon-suitcase"></i>
-				</div>
-				<div class="service-list-name">FOREVER</div>
-			</li>
-			<li>
-				<div class="ibox">
-					<i class="icon-trophy"></i>
-				</div>
-				<div class="service-list-name">ONE MILLION</div>
-			</li>
-			<li>
-				<div class="ibox">
-					<i class="icon-heart-empty"></i>
-				</div>
-				<div class="service-list-name">SELF NOTE</div>
-			</li>
-		</ul>
+		<h1 class="sect-titles font-Oswald padt60">SERVICES</h1>
+
 		<div class="container margint70">
 			<div class="row marginb60 service-number-box">
 				<div class="col-lg-3 col-sm-6">
@@ -193,7 +104,6 @@
 	<!-- PORTFOLIO -->
 	<div id="portfolio" class="alt-portfolio">
 		<h1 class="sect-titles font-Oswald padt60">PORTFOLIO</h1>
-		<div class="divide margint40">x</div>
 		<p class="info margint30">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ratione harum commodi eum aperiam accusantium quaerat eius iure ut cupiditate esse atque molestias mollitia sit vero animi ipsa quo odio?</p>
 		<div class="work-list margint60 padb60">
 			<ul class="clearfix">
@@ -260,9 +170,8 @@
 	<!-- FOOTER -->
 	<div id="footer">
 		<div class="container">
-			<img class="margint40" src="img/footer_logo.png" alt="" />
-			<h5 class="margint10">Scrolle Responsive Parallax One Page Template</h5>
-			<h5 class="margint10">2035 Themes | Copyright © 2013</h5>
+			<h5 class="margint10">MINI IS BIG. MINI IS ORIGINAL. MINI IS FUN.</h5>
+			<h5 class="margint10">MINIVERTISING Copyright ©</h5>
 		</div>
 	</div>
 </div>
