--- a/public/css/main.css
+++ b/public/css/main.css
@@ -88,7 +88,7 @@ body {
 }
 
 .sect-titles {
-	font-size: 40px;
+	font-size: 50px;
 	color: #000;
 	font-weight: 300;
 }
@@ -258,7 +258,7 @@ body {
 
 #portfolio {
 	height: auto;
-	background: #fff;
+	background: #222;
 	text-align: center;
 	color: #000;
 }
@@ -266,8 +266,9 @@ body {
 #services {
 	height: auto;
 	background: #777777 url(/img/temp/sbg.jpg) repeat top center;
+	background:#fff;
 	text-align: center;
-	color: #fff;
+	color: #555;
 }
 
 #team {
@@ -688,7 +689,7 @@ body {
 .qtext {
 	max-width: 1030px;
 	margin: 0 auto;
-	padding: 160px 0 0 0;
+	padding: 160px 0 ;
 	font-size: 50px;
 	font-weight: 700;
 	color: #fff;
