--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,7 @@
     </div>
 	</div>
 	<!-- HOME -->
-	<div id="home" class="intro white">
+	<div id="home" class="intro">
 		<div class="pos-center">
 			<div class="logo">
 				
@@ -47,57 +47,14 @@
 	<!-- ABOUT -->
 	<div id="about">
 		<h1 class="sect-titles font-Oswald padt60">ABOUT</h1>
-		<div class="divide margint40">x</div>
-		<div class="container margint40">
-			<div class="about-text">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas adipisci odio ex nemo quam sint dolore quasi quod fuga magni accusamus tempore. Eligendi inventore laudantium totam fuga accusantium accusamus ab fugiat molestiae impedit reiciendis nemo voluptatum minus iusto tenetur culpa asperiores nobis corrupti assumenda aspernatur similique commodi distinctio ad veniam vero temporibus molestias ratione nisi voluptates ipsa ex eum suscipit alias dolorum repellat nesciunt consequuntur quos rem neque a excepturi aliquid voluptatem. Blanditiis ipsam laboriosam ex architecto eveniet temporibus veniam assumenda deserunt quam reiciendis tenetur voluptas facilis sapiente esse est nulla ut numquam labore aliquam expedita deleniti! Natus praesentium ipsam qui saepe blanditiis amet iure nulla officiis incidunt officia optio exercitationem esse recusandae sapiente quasi explicabo quidem minima perspiciatis dolor impedit! Praesentium qui ipsam excepturi aperiam ut repellendus dolore ipsum recusandae quasi ullam quisquam tempora at dolorum! Ex rem explicabo et consequatur perferendis sapiente repudiandae dicta quibusdam tempore odit excepturi mollitia voluptas. Libero eligendi provident fuga consequatur et corporis nemo esse dignissimos aliquam eaque sunt blanditiis architecto quas consectetur non totam vel optio nisi tempora quaerat ad vitae labore neque accusamus amet doloremque quis? A consequuntur vero qui accusamus eaque deserunt corrupti asperiores explicabo iste facilis unde quia repudiandae est.</p>
-				<p class="read-more"><a href="#" class="rm-button">READ MORE <i class="icon-angle-down"></i></a></p>
-			</div>
-		</div>
 		<div class="container margint60">
 			<div class="row">
-				<div class="col-lg-3 col-sm-6 col3-box">
-					<div class="about-box">
-						<div class="about-icon">
-							<i class="icon-star-empty"></i>
-						</div>
-						<h3 class="margint20">PARALLAX EFFECTS</h3>
-						<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet officia dolore ipsum laborum necessitatibus similique.</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6 col3-box">
-					<div class="about-box">
-						<div class="about-icon">
-							<i class="icon-envelope-alt"></i>
-						</div>
-						<h3 class="margint20">RETINA READY</h3>
-						<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet officia dolore ipsum laborum necessitatibus similique.</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6 col3-box">
-					<div class="about-box">
-						<div class="about-icon">
-							<i class="icon-heart-empty"></i>
-						</div>
-						<h3 class="margint20">EASY CUSTOMIZE</h3>
-						<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet officia dolore ipsum laborum necessitatibus similique.</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-sm-6 col3-box">
-					<div class="about-box">
-						<div class="about-icon">
-							<i class="icon-flag-alt"></i>
-						</div>
-						<h3 class="margint20">WELL DOCUMENTED</h3>
-						<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet officia dolore ipsum laborum necessitatibus similique.</p>
-					</div>
-				</div>
 			</div>
 		</div>
 		<div class="skills-box margint70">
 			<h1 class="sect-mini-titles margint60">WE ARE REPRESENT SCROLLE WITH FROM YOU</h1>
-			<div class="divide margint10">x</div>
-			<p class="info margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ea ab neque perferendis unde odio sint tenetur iure autem iste blanditiis dolorum error laborum quas repudiandae optio qui voluptatibus excepturi.</p>
+			<p class="info margint10">미디어가 공평해졌다라는 것은 컨텐츠의 중요성이 더 커진것을 의미합니다.
+매체의 노출량만으로 브랜딩 되던 시기는 지났습니다. 공평해진 미디어 세상은 더 재밌는 일들로 가득 차고 있습니다. 그렇다면 우리의 광고는 더이상 광고로 머물러선 안됩니다.</p>
 			<div class="container margint60">
 				<div class="row marginb40">
 					<div class="col-lg-8 col-sm-6 bar-box">
@@ -120,24 +77,63 @@
 		<div class="container margint70">
 			<div class="row marginb60 service-number-box">
 				<div class="col-lg-3 col-sm-6">
-					<div class="snumber">01</div>
-					<h3 class="font-Oswald margint20">SERVICES STYLE 1</h3>
-					<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid velit deleniti perspiciatis minus ea animi adipisci error sapiente placeat eaque libero itaque!</p>
+					
+					<h3 class="font-Oswald margint20">ONLINE PROMOTION</h3>
+					<ul>
+						<li>프로모션기획/제작</li>
+						<li>캠페인컨셉</li>
+						<li>카피라이팅</li>
+						<li>온라인 배너 제작</li>
+					</ul>
+					
 				</div>
 				<div class="col-lg-3 col-sm-6">
-					<div class="snumber">02</div>
-					<h3 class="font-Oswald margint20">SERVICES STYLE 2</h3>
-					<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid velit deleniti perspiciatis minus ea animi adipisci error sapiente placeat eaque libero itaque!</p>
+					
+					<h3 class="font-Oswald margint20">VIRAL&TUTORIAL FILM</h3>
+					<ul>
+						<li>프로모션기획/제작</li>
+						<li>캠페인컨셉</li>
+						<li>카피라이팅</li>
+						<li>온라인 배너 제작</li>
+					</ul>
 				</div>
 				<div class="col-lg-3 col-sm-6">
-					<div class="snumber">03</div>
-					<h3 class="font-Oswald margint20">SERVICES STYLE 3</h3>
-					<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid velit deleniti perspiciatis minus ea animi adipisci error sapiente placeat eaque libero itaque!</p>
+					
+					<h3 class="font-Oswald margint20">FACEBOOK CAMPAIGN</h3>
+					<ul>
+						<li>프로모션기획/제작</li>
+						<li>캠페인컨셉</li>
+						<li>카피라이팅</li>
+						<li>온라인 배너 제작</li>
+					</ul>
 				</div>
 				<div class="col-lg-3 col-sm-6">
-					<div class="snumber">04</div>
-					<h3 class="font-Oswald margint20">SERVICES STYLE 4</h3>
-					<p class="margint10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid velit deleniti perspiciatis minus ea animi adipisci error sapiente placeat eaque libero itaque!</p>
+					
+					<h3 class="font-Oswald margint20">WEBSITE</h3>
+					<ul>
+						<li>프로모션기획/제작</li>
+						<li>캠페인컨셉</li>
+						<li>카피라이팅</li>
+						<li>온라인 배너 제작</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="about-parallax font-Oswald">
+			<div class="container margint70">
+				<div class="row marginb60 service-number-box">
+					<div class="col-lg-3 col-sm-6">
+						TEAM
+					</div>
+					<div class="col-lg-3 col-sm-6">
+						TEAM
+					</div>
+					<div class="col-lg-3 col-sm-6">
+						TEAM
+					</div>
+					<div class="col-lg-3 col-sm-6">
+						TEAM
+					</div>
 				</div>
 			</div>
 		</div>
