--- a/public/css/main.css
+++ b/public/css/main.css
@@ -258,7 +258,7 @@ body {
 
 #portfolio {
 	height: auto;
-	background: #222;
+	background: #fff;
 	text-align: center;
 	color: #000;
 }
@@ -319,7 +319,7 @@ body {
 
 .scroll-down i {
 	font-size: 55px;
-	color: #ffeb00;
+	color: #333;
 }
 
 .scroll-down a {
@@ -948,9 +948,12 @@ body {
 }
 
 .service-number-box h3 {
-	font-size: 20px;
+	font-size: 17px;
 	font-weight: 600;
-	color: #ffeb00;
+	color: #333;
+	border-bottom:3px solid #222;
+	padding-bottom:15px;
+	margin-bottom:15px;
 }
 
 .service-number-box p {
