--- a/app/views/admin/projects/_form.html.erb
+++ b/app/views/admin/projects/_form.html.erb
@@ -3,11 +3,13 @@ $(function () {
   $('#big_image').fileupload({
     dataType: 'json',
     add: function (e, data) {
+      var project_id = $('#project_id').val();
+      data.formData = {project_id: project_id};
       data.context = $('<p/>').text('Uploading...').appendTo(document.body);
       data.submit();
     },
     done: function (e, data) {
-    $.each(data.result.files, function (index, file) {
+      $.each(data.result.files, function (index, file) {
         $('<p/>').text(file.name).appendTo("#project_big");
       });
     }
@@ -15,6 +17,7 @@ $(function () {
 });
 </script>
 <%= simple_form_for([:admin, @project]) do |f| %>
+  <%= f.hidden_field :project_id, :value => @project.id, id: "project_id" %>
   <% if @project.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@project.errors.count, "error") %> prohibited this project from being saved:</h2>
@@ -45,10 +48,10 @@ $(function () {
                           <div class="uploader hover" id="project_thumbnail">
                             <%= f.file_field :project_thumbnail %>
                           </div>
-                          <span class="help-inline">메인페이지 표시.</span>
+                          <span class="help-inline">리스트의 썸네일 표시.</span>
                         </div>
                       </div>
-                      <%= f.fields_for :project_pictures do |project_picture| %>
+                      <%#= f.fields_for :project_pictures do |project_picture| %>
                         <div class="control-group">
                           <label class="control-label">원래크기(1170x615)</label>
                           <div>
@@ -56,13 +59,13 @@ $(function () {
                           </div>
                           <div class="controls">
                             <div class="uploader hover" id="project_big">
-                                <%= project_picture.file_field :project_big, id: "big_image", :multiple => true, "data-url" => image_upload_projects_path(:json) %>
+                                <%= file_field_tag :project_big, id: "big_image", :multiple => true, "data-url" => image_upload_projects_path(:json) %>
                                 <p></p>
                             </div>
                             <span class="help-inline">메인페이지 표시.</span>
                           </div>
                         </div>
-                        <% end %>
+                        <%# end %>
                       <div class="control-group">
                         <label class="control-label" for="focusedInput">제목</label>
                         <div class="controls">
