--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -1,39 +1,38 @@
- <div class="row-fluid">
-    <!-- block -->
-    <div class="block">
-        <div class="navbar navbar-inner block-header">
-            <div class="muted pull-left">프로젝트 목록</div>
-        </div>
-        <div class="block-content collapse in">
-            <div class="span12">
-                <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example">
-                <thead>
-                  <tr>
-                    <th>#</th>
-                    <th>프로젝트명</th>
-                    <th>카테고리</th>
-                    <th>관리</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <% @projects.each do |project| %>
-                  <tr class="">
-                    <td><%= project.id %></td>
-                    <td class="center"><%= project.title %></td>
-                    <td class="center"><%= project.category %></td>
-                    <td class="center">
-                      <%= link_to "상세정보", admin_project_path(project) %>
-                      <%= link_to "수정", edit_admin_project_path(project) %>
-                      <%= link_to "삭제", admin_project_path(project), method: :delete, confirm: "삭제 OK?" %>
-                      <a href="#">멘티</a>
-                    </td>
-                  </tr>
-                  <% end %>
-                </tbody>
-              </table>
-            </div>
-            <%= link_to "프로젝트 등록", new_admin_project_path, class: "btn btn-primary"%>
-        </div>
+<div class="row-fluid">
+  <!-- block -->
+  <div class="block">
+    <div class="navbar navbar-inner block-header">
+      <div class="muted pull-left">프로젝트 목록</div>
     </div>
-    <!-- /block -->
+    <div class="block-content collapse in">
+    <div class="span12">
+    <table class="table table-striped table-bordered" id="example">
+      <thead>
+        <tr>
+        <th>#</th>
+        <th>프로젝트명</th>
+        <th>카테고리</th>
+        <th>관리</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @projects.each do |project| %>
+        <tr class="">
+          <td><%= project.id %></td>
+          <td class="center"><%= project.title %></td>
+          <td class="center"><%= project.category %></td>
+          <td class="center">
+            <%= link_to "상세정보", admin_project_path(project) %>
+            <%= link_to "수정", edit_admin_project_path(project) %>
+            <%= link_to "삭제", admin_project_path(project), method: :delete, data: {confirm: "삭제 OK?"} %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    </div>
+    <%= link_to "프로젝트 등록", new_admin_project_path, class: "btn btn-primary"%>
+    </div>
+  </div>
+  <!-- /block -->
 </div>
