project 이미지 여러개 보이기

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,9 +5,11 @@
 		<div class="project-slider margint20">
       <div class="slider-wrapper theme-default">
         <div id="project-slider-wrapper" class="nivoSlider">
-          <%= image_tag @project.project_big.url, class: "img-responsive"%>
-          <%= image_tag @project.project_big.url, class: "img-responsive"%>
-          <%= image_tag @project.project_big.url, class: "img-responsive"%>
+          <% unless @project.project_pictures.empty? %>
+            <% @project.project_pictures.each do |picture| %>
+              <%= image_tag @project.project_pictures.project_big.url, class: "img-responsive" %>
+            <% end %>
+          <% end %>
         </div>
       </div>
 		</div>
